# axum-controller

./: .gitignore  Cargo.toml  PLAN.md  README.md  flake.nix  package.nix
axum-controller/: Cargo.toml
axum-controller-macros/: Cargo.toml  README.md
axum-controller-macros/src/: lib.rs
axum-controller/examples/: controller.rs
axum-controller/src/: lib.rs
examples/: controller.rs
src/: lib.rs
