[workspace]
members = ["axum-controller", "axum-controller-macros"]
resolver = "3"

[workspace.package]
authors = ["Tristan Druyen <ek36g2vcc@mozmail.com>"]
categories = ["web-programming"]
description = "Helper macro's for better readability of axum handlers"
edition = "2024"
homepage = "https://git.vlt81.de/vault81/axum-controller"
keywords = ["axum", "controller", "macro", "routing"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://git.vlt81.de/vault81/axum-controller"
version = "0.2.0"
