[package]
name = "axum-controller"
version = "0.4.0"
license = "AGPL-3.0-or-later"
authors = ["Tristan Druyen <ek36g2vcc@mozmail.com>"]
categories = ["web-programming"]
description = "Helper macro's for better readability of axum handlers"
edition = "2021"
homepage = "https://git.vlt81.de/vault81/axum-controller"
keywords = ["axum", "controller", "macro", "routing"]
readme = "README.md"
repository = "https://git.vlt81.de/vault81/axum-controller"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
axum = { version = "0.8" }
axum-typed-routing = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }

[lib]
proc-macro = true
