[package]
authors.workspace = true
categories.workspace = true
description = "Macro's for `axum-controller`"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "axum-controller-macros"
readme = "./README.md"
repository.workspace = true
version.workspace = true

[dependencies]
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["parsing"] }

[dev-dependencies]
axum = { version = "0.8", features = [] }
serde = { version = "1.0", features = ["derive"] }

[lib]
proc-macro = true
