[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "axum-controller"
readme = "./README.md"
repository.workspace = true
version.workspace = true

[dependencies]
axum-controller-macros = { path = "../axum-controller-macros", version = "0.3" }

[dev-dependencies]
axum = "0.8"
axum-test = { version = "17", features = [] }
axum-typed-routing = { version = "0.4" }
json = "0.12"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[features]
default = []
